force-app/main/default/objects/RTEvent__c/RTEvent__c.object-meta.xml
<CustomObject>
    <description>Primary ReadyTalk Events record.</description>
    <label>RT Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RT Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>