force-app/main/default/objects/RTEvent__c/fields/Access_Code__c.field-meta.xml
<CustomField>
    <fullName>Access_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Access Code</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipName>R00N50000001bJrhEAE</relationshipName>
    <type>Lookup</type>
</CustomField>