force-app/main/default/objects/RTEvent__c/fields/Access_Code_Current_Product__c.field-meta.xml
<CustomField>
    <fullName>Access_Code_Current_Product__c</fullName>
    <description>The current product the Access Code is on</description>
    <formula>Access_Code__r.Current_Product__c</formula>
    <inlineHelpText>The current product the Access Code is on</inlineHelpText>
    <label>Access Code Current Product</label>
    <type>Text</type>
</CustomField>