force-app/main/default/objects/RTEvent__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RT Events</relationshipLabel>
    <relationshipName>R00N50000001bEk2EAE</relationshipName>
    <type>Lookup</type>
</CustomField>