force-app/main/default/objects/RTEvent__c/fields/Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>The Account Executive for this customer</inlineHelpText>
    <label>Account Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N50000001btjXEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>