force-app/main/default/objects/RTEvent__c/fields/Account_Owner_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Formula__c</fullName>
    <description>New field created by Brent to correctly display the RT Event&#39;s account owner. Confirmed that this field is for reference - no actions are taken on this field. This will allow us to maintain fewer user-specific workflows.</description>
    <formula>Account__r.Owner.FirstName +&quot; &quot;+ Account__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>