force-app/main/default/objects/RTEvent__c/fields/Add_l_Dry_Run_s__c.field-meta.xml
<CustomField>
    <fullName>Add_l_Dry_Run_s__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Add&#39;l Dry Run(s)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>