force-app/main/default/objects/RTEvent__c/fields/Additional_250_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Additional_250_Attendees__c</fullName>
    <label>Additional 250 Attendees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>