force-app/main/default/objects/RTEvent__c/fields/Additional_30_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Additional_30_Minutes__c</fullName>
    <label>Additional 30 Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>