force-app/main/default/objects/RTEvent__c/fields/Additional_Archive_Extension__c.field-meta.xml
<CustomField>
    <fullName>Additional_Archive_Extension__c</fullName>
    <label>Additional Archive Extension</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>