force-app/main/default/objects/RTEvent__c/fields/Additional_Production_Engineering__c.field-meta.xml
<CustomField>
    <fullName>Additional_Production_Engineering__c</fullName>
    <description>Billed per hour with a one hour minimum for such tasks as creative services, HTML/Flash Development, slide design, etc</description>
    <inlineHelpText>Billed per hour with a one hour minimum for such tasks as creative services, HTML/Flash Development, slide design, etc</inlineHelpText>
    <label>Additional Production/Engineering Servic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>