force-app/main/default/objects/RTEvent__c/fields/Additional_Recording_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Recording_Info__c</fullName>
    <label>Additional Recording Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>