force-app/main/default/objects/RTEvent__c/fields/Additional_Webcast_Support_per_hour__c.field-meta.xml
<CustomField>
    <fullName>Additional_Webcast_Support_per_hour__c</fullName>
    <label>Additional Webcast Support (per hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>