force-app/main/default/objects/RTEvent__c/fields/Admin_Tag__c.field-meta.xml
<CustomField>
    <fullName>Admin_Tag__c</fullName>
    <description>Field used to force WF updates</description>
    <label>Admin Tag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>