force-app/main/default/objects/RTEvent__c/fields/Archive_Specific_Shut_Down_Date__c.field-meta.xml
<CustomField>
    <fullName>Archive_Specific_Shut_Down_Date__c</fullName>
    <label>Archive Specific Shut-Down Date</label>
    <type>Date</type>
</CustomField>