force-app/main/default/objects/RTEvent__c/fields/Associated_Conference_ID__c.field-meta.xml
<CustomField>
    <fullName>Associated_Conference_ID__c</fullName>
    <label>Associated Conference ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>