force-app/main/default/objects/RTEvent__c/fields/Audio_Operator_Notes__c.field-meta.xml
<CustomField>
    <fullName>Audio_Operator_Notes__c</fullName>
    <description>Field label updated 1/15/15 per SFA-002488</description>
    <inlineHelpText>This field is visible to InterCall Operators via the ReadyTalk Workspace.  It updates approximately every one minute.</inlineHelpText>
    <label>Operator Workspace Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>