force-app/main/default/objects/RTEvent__c/fields/Audio_Provider__c.field-meta.xml
<CustomField>
    <fullName>Audio_Provider__c</fullName>
    <inlineHelpText>Indicates the audio service provider that will be supporting this event call.</inlineHelpText>
    <label>Supported By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level 3</fullName>
                <default>true</default>
                <label>Level 3</label>
            </value>
            <value>
                <fullName>InterCall</fullName>
            </value>
            <value>
                <fullName>PGi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>