force-app/main/default/objects/RTEvent__c/fields/Bill_to_Access_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Access_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CAUTION - USED IN INTEGRATIONS
Insert access code that should be billed for event services.</description>
    <inlineHelpText>Insert access code that should be billed for event services.</inlineHelpText>
    <label>Bill to Access Code</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>RT Events (Bill to Access Code)</relationshipLabel>
    <relationshipName>RT_Events</relationshipName>
    <type>Lookup</type>
</CustomField>