force-app/main/default/objects/RTEvent__c/fields/Bill_To_Access_Code_ID__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Access_Code_ID__c</fullName>
    <formula>Bill_to_Access_Code__r.Id</formula>
    <label>Bill To Access Code ID</label>
    <type>Text</type>
</CustomField>