force-app/main/default/objects/RTEvent__c/fields/Booked_With__c.field-meta.xml
<CustomField>
    <fullName>Booked_With__c</fullName>
    <inlineHelpText>Indicates the audio provider the event was originally booked with.</inlineHelpText>
    <label>Booked With</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>InterCall</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>PGi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>