force-app/main/default/objects/RTEvent__c/fields/Broadcast_Audio_Event_Charge__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_Audio_Event_Charge__c</fullName>
    <description>Broadcast Audio Event Charge.  Carried in from account level. Editable.</description>
    <inlineHelpText>Broadcast Audio Event Charge.</inlineHelpText>
    <label>Broadcast Audio Event Charge</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>