force-app/main/default/objects/RTEvent__c/fields/Broadcast_Audio_Event_Duration2__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_Audio_Event_Duration2__c</fullName>
    <label>Broadcast Audio Event Duration*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>