force-app/main/default/objects/RTEvent__c/fields/Broadcast_Audio_Event_Duration__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_Audio_Event_Duration__c</fullName>
    <description>Broadcast Audio Event Duration options.</description>
    <inlineHelpText>Select duration increment for BA event.</inlineHelpText>
    <label>Broadcast Audio Event Duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>60 minutes</fullName>
            </value>
            <value>
                <fullName>90 minutes</fullName>
            </value>
            <value>
                <fullName>120 minutes</fullName>
            </value>
            <value>
                <fullName>150 minutes</fullName>
            </value>
            <value>
                <fullName>180 minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>