force-app/main/default/objects/RTEvent__c/fields/Broadcast_Audio_Event_Participants__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_Audio_Event_Participants__c</fullName>
    <description>Number of participants utilizing BA for an event.</description>
    <inlineHelpText>Enter number of participants utilizing Broadcast Audio for this event.</inlineHelpText>
    <label>Broadcast Audio Event Participants</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>