force-app/main/default/objects/RTEvent__c/fields/Broadcast_Audio_Type__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_Audio_Type__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Indicates if BA will be utilized on a gold, platinum, standalone or wholesale customer basis for this event.</description>
    <inlineHelpText>Select which Event Package/Service Type will utilize Broadcast Audio.</inlineHelpText>
    <label>Broadcast Audio Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Audio_Broadcast__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Gold Event</fullName>
            </value>
            <value>
                <fullName>Platinum Event</fullName>
            </value>
            <value>
                <fullName>Stand Alone</fullName>
            </value>
            <value>
                <fullName>Wholesale Per Participant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>