force-app/main/default/objects/RTEvent__c/fields/Call_In_Audio_Replay__c.field-meta.xml
<CustomField>
    <fullName>Call_In_Audio_Replay__c</fullName>
    <label>Call-In Audio Replay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>