force-app/main/default/objects/RTEvent__c/fields/Call_In_Audio_Replay_Access_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Call_In_Audio_Replay_Access_Instructions__c</fullName>
    <label>Call-In Audio Replay Access Instructions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>