force-app/main/default/objects/RTEvent__c/fields/Cancellation_Charge__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Charge__c</fullName>
    <description>Selected when an event status is set to Cancelled.</description>
    <label>Cancellation Charge</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No Charge - Cancelled with 24+ hours notice</fullName>
            </value>
            <value>
                <fullName>Fee Charged - Cancelled without 24 hours notice</fullName>
            </value>
            <value>
                <fullName>Fee Charged - Customer was a No Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>