force-app/main/default/objects/RTEvent__c/fields/Cancellation_Fee_Advanced_Notice2__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fee_Advanced_Notice2__c</fullName>
    <label>Cancellation Fee - Advanced Notice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>