force-app/main/default/objects/RTEvent__c/fields/Cancellation_Fee_Late_Notice__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fee_Late_Notice__c</fullName>
    <inlineHelpText>Cancellation within 24 hours</inlineHelpText>
    <label>Cancellation Fee - Late Notice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>