force-app/main/default/objects/RTEvent__c/fields/Certification_Exam__c.field-meta.xml
<CustomField>
    <fullName>Certification_Exam__c</fullName>
    <label>Certification Exam</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>