force-app/main/default/objects/RTEvent__c/fields/Chairperson_Email__c.field-meta.xml
<CustomField>
    <fullName>Chairperson_Email__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Chairperson&apos;s email address</inlineHelpText>
    <label>Chairperson Email</label>
    <type>Email</type>
</CustomField>