force-app/main/default/objects/RTEvent__c/fields/Chairperson_Phone__c.field-meta.xml
<CustomField>
    <fullName>Chairperson_Phone__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Phone number for the chairperson.</inlineHelpText>
    <label>Chairperson Phone</label>
    <type>Phone</type>
</CustomField>