force-app/main/default/objects/RTEvent__c/fields/Clearance_Line_Who__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Line_Who__c</fullName>
    <description>List who is requesting a clearance line with the operator.</description>
    <inlineHelpText>List who is requesting a clearance line with the operator.</inlineHelpText>
    <label>Clearance Line Who</label>
    <type>TextArea</type>
</CustomField>