force-app/main/default/objects/RTEvent__c/fields/Clearance_Line_Why__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Line_Why__c</fullName>
    <description>Provide a reason as to why a Clearance Line is being requested.?</description>
    <inlineHelpText>Provide a reason as to why a Clearance Line is being requested.</inlineHelpText>
    <label>Clearance Line Why</label>
    <type>TextArea</type>
</CustomField>