force-app/main/default/objects/RTEvent__c/fields/Click_to_Join__c.field-meta.xml
<CustomField>
    <fullName>Click_to_Join__c</fullName>
    <label>Click to Join</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>