force-app/main/default/objects/RTEvent__c/fields/Click_to_Join_Participant_Dial_In_Access__c.field-meta.xml
<CustomField>
    <fullName>Click_to_Join_Participant_Dial_In_Access__c</fullName>
    <label>Click to Join Participant Dial-In Access</label>
    <type>Url</type>
</CustomField>