force-app/main/default/objects/RTEvent__c/fields/Closed_Captioning__c.field-meta.xml
<CustomField>
    <fullName>Closed_Captioning__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Closed Captioning Services are available as an add-on service to Gold/ Platinum Webinars and Direct/ Premium Operator Assisted Conferences.</description>
    <inlineHelpText>Select &quot;Yes&quot; if the event will include Closed Captioning Services (add&#39;l fees will apply).</inlineHelpText>
    <label>Closed Captioning</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>