force-app/main/default/objects/RTEvent__c/fields/Comm_Line_Who__c.field-meta.xml
<CustomField>
    <fullName>Comm_Line_Who__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
List who will be on the Communication Line with the operator.</description>
    <inlineHelpText>List who will be on the Communication Line with the operator.</inlineHelpText>
    <label>Comm Line Who</label>
    <type>TextArea</type>
</CustomField>