force-app/main/default/objects/RTEvent__c/fields/Comm_Line_Why__c.field-meta.xml
<CustomField>
    <fullName>Comm_Line_Why__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Explain why a Communication Line is being requested.</description>
    <inlineHelpText>Explain why a Communication Line is being requested.</inlineHelpText>
    <label>Comm Line Why</label>
    <type>TextArea</type>
</CustomField>