force-app/main/default/objects/RTEvent__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <description>Enter any special Operator instructions, details, or comments relating to this event (eg: OPAL)</description>
    <inlineHelpText>Customer facing comments.</inlineHelpText>
    <label>Reservation Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>