force-app/main/default/objects/RTEvent__c/fields/Conference_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Conference_Phone_Number__c</fullName>
    <description>CVS-Specific Use Only at this time.</description>
    <inlineHelpText>This field is now read only.  The field is populated with the number in the L3 Toll Free Number.</inlineHelpText>
    <label>Conference Phone Number</label>
    <type>Phone</type>
</CustomField>