force-app/main/default/objects/RTEvent__c/fields/Coordinator_Notes_New__c.field-meta.xml
<CustomField>
    <fullName>Coordinator_Notes_New__c</fullName>
    <label>Coordinator Notes - New</label>
    <length>62487</length>
    <type>LongTextArea</type>
</CustomField>