force-app/main/default/objects/RTEvent__c/fields/Custom_Script_Rec_d__c.field-meta.xml
<CustomField>
    <fullName>Custom_Script_Rec_d__c</fullName>
    <description>Internal indicator if the client&#39;s custom script has been received by ReadyTalk.</description>
    <inlineHelpText>Indicate if the client has submitted their custom script for their event introduction.</inlineHelpText>
    <label>Custom Script Rec&#39;d</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No, TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>