force-app/main/default/objects/RTEvent__c/fields/Customer_Requested_Conf_End__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requested_Conf_End__c</fullName>
    <description>Customer Requested (igloo form) conference end time.</description>
    <inlineHelpText>This is the conference end time the customer requested. Represents the conference end time on OA bridge.</inlineHelpText>
    <label>Customer Requested Conf End</label>
    <length>250</length>
    <type>Text</type>
</CustomField>