force-app/main/default/objects/RTEvent__c/fields/Customer_Requested_Conf_Start__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requested_Conf_Start__c</fullName>
    <description>Customer Requested (igloo form) conference start time.</description>
    <inlineHelpText>This is the conference start time the customer requested. Represents the conference start time on OA bridge.</inlineHelpText>
    <label>Customer Requested Conf Start</label>
    <length>250</length>
    <type>Text</type>
</CustomField>