force-app/main/default/objects/RTEvent__c/fields/Customer_Requested_Conf_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requested_Conf_Timezone__c</fullName>
    <description>Customer Requested (igloo form) conference timezone.</description>
    <inlineHelpText>This is the timezone the customer requested. Represents the conference timezone on OA bridge.</inlineHelpText>
    <label>Customer Requested Conf Timezone</label>
    <length>250</length>
    <type>Text</type>
</CustomField>