force-app/main/default/objects/RTEvent__c/fields/Date_Confirmation_Sent_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_Confirmation_Sent_to_Customer__c</fullName>
    <label>Date Confirmation Sent to Customer</label>
    <type>Date</type>
</CustomField>