force-app/main/default/objects/RTEvent__c/fields/Date_Event_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Event_Reminder_Sent__c</fullName>
    <description>Date that the event reminder with line count was sent to customer to confirm all is ready.</description>
    <label>Date Event Reminder Sent</label>
    <type>DateTime</type>
</CustomField>