force-app/main/default/objects/RTEvent__c/fields/Date_Order_Placed_with_GX__c.field-meta.xml
<CustomField>
    <fullName>Date_Order_Placed_with_GX__c</fullName>
    <description>Date the order was sent to Global Crossing.</description>
    <label>Date Order Placed with GX</label>
    <type>DateTime</type>
</CustomField>