force-app/main/default/objects/RTEvent__c/fields/Date_Registration_was_Set_Up__c.field-meta.xml
<CustomField>
    <fullName>Date_Registration_was_Set_Up__c</fullName>
    <label>Date Registration was Set Up</label>
    <type>Date</type>
</CustomField>