force-app/main/default/objects/RTEvent__c/fields/Date_Restricted_List_Sent_to_GX__c.field-meta.xml
<CustomField>
    <fullName>Date_Restricted_List_Sent_to_GX__c</fullName>
    <label>Date Restricted List Sent to GX</label>
    <type>DateTime</type>
</CustomField>