force-app/main/default/objects/RTEvent__c/fields/Denver_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Denver_End_Time__c</fullName>
    <description>Indicates Event End Time (Mountain Time).</description>
    <inlineHelpText>Indicates Event End Time (Mountain Time).</inlineHelpText>
    <label>Denver End Time</label>
    <type>DateTime</type>
</CustomField>