force-app/main/default/objects/RTEvent__c/fields/DenverStartTime__c.field-meta.xml
<CustomField>
    <fullName>DenverStartTime__c</fullName>
    <description>Indicates Event Start Time (Mountain Time).</description>
    <inlineHelpText>Indicates Event Start Time (Mountain Time).</inlineHelpText>
    <label>Denver Start Time</label>
    <type>DateTime</type>
</CustomField>