force-app/main/default/objects/RTEvent__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Department__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Department__c.Parent_Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <infoMessage>Only showing active departments for the account associated with the RT Event record.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>RT Events (Department)</relationshipLabel>
    <relationshipName>RT_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>