force-app/main/default/objects/RTEvent__c/fields/Dial_Out_Number__c.field-meta.xml
<CustomField>
    <fullName>Dial_Out_Number__c</fullName>
    <description>Enter number operator will dial out to.</description>
    <label>Dial Out #</label>
    <type>Phone</type>
</CustomField>