force-app/main/default/objects/RTEvent__c/fields/Domestic_Part_Dial_in_s__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Part_Dial_in_s__c</fullName>
    <label>Domestic Part Dial in #&#39;s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>