force-app/main/default/objects/RTEvent__c/fields/Domestic_Spkr_Dial_in_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Spkr_Dial_in_Numbers__c</fullName>
    <description>List phone numbers</description>
    <label>Domestic Spkr Dial in #s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>