force-app/main/default/objects/RTEvent__c/fields/Dress_Rehearsal__c.field-meta.xml
<CustomField>
    <fullName>Dress_Rehearsal__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Operator Assisted</inlineHelpText>
    <label>Dress Rehearsal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>