force-app/main/default/objects/RTEvent__c/fields/Dry_Run_Hours__c.field-meta.xml
<CustomField>
    <fullName>Dry_Run_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Dry Run Hours</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>