force-app/main/default/objects/RTEvent__c/fields/Dry_Run_Needed__c.field-meta.xml
<CustomField>
    <fullName>Dry_Run_Needed__c</fullName>
    <description>**CAUTION - USED IN INTEGRATIONS**
30 minute dry run offered prior to event.</description>
    <inlineHelpText>Select &quot;Yes&quot; if a dry run has been requested for this event.</inlineHelpText>
    <label>Dry Run Needed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>