force-app/main/default/objects/RTEvent__c/fields/ECD_Event_Call_Director__c.field-meta.xml
<CustomField>
    <fullName>ECD_Event_Call_Director__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Host Controls is an add-on service for Premium level Operator-Assisted audio conferences. It is an online tool that enables the meeting organizer to view who has joined the call, manage the question queue during Q&amp;A ,and chat with the conference operator.</description>
    <inlineHelpText>Select &quot;Yes&quot; if an ECD has been requested for this event.</inlineHelpText>
    <label>Host Controls</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>