force-app/main/default/objects/RTEvent__c/fields/ECD_Login_Instructions__c.field-meta.xml
<CustomField>
    <fullName>ECD_Login_Instructions__c</fullName>
    <label>Host Controls Login Instructions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>