force-app/main/default/objects/RTEvent__c/fields/EM_Role__c.field-meta.xml
<CustomField>
    <fullName>EM_Role__c</fullName>
    <label>EM Role</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Audio_Provider__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
            <value>
                <fullName>No EM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>