force-app/main/default/objects/RTEvent__c/fields/End_Time2__c.field-meta.xml
<CustomField>
    <fullName>End_Time2__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Scheduled event end time.</description>
    <inlineHelpText>Scheduled event end time.</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>