force-app/main/default/objects/RTEvent__c/fields/Event_Archive_Options__c.field-meta.xml
<CustomField>
    <fullName>Event_Archive_Options__c</fullName>
    <label>Event Archive Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12 Month Archive (default; included with core event)</fullName>
            </value>
            <value>
                <fullName>No Archive</fullName>
            </value>
            <value>
                <fullName>Specific Shut-Down</fullName>
            </value>
            <value>
                <fullName>Event on CD ($400)</fullName>
            </value>
            <value>
                <fullName>Single File Archive (FLC, MPG, WMV)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>