force-app/main/default/objects/RTEvent__c/fields/Event_Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>Event_Base_Rate__c</fullName>
    <label>Event Base Rate</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>